🚚 - Adjust Sonar tips
Signed-off-by: nicolas <nicolas.dsw@gmail.com>